replaces flatpages with custom pages

--- a/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.core_name}}/templates/page.html
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.core_name}}/templates/page.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container">
+    {% block page_content %}{% endblock %}
+</div>
 {% endblock %}
 
