--- a/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.core_name}}/templates/base.html
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.core_name}}/templates/base.html
@@ -7,20 +7,23 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <title>{% block title %}{% endraw %}{{ cookiecutter.project_name }}{% raw %}{% endblock %}</title>
         {% block meta %}
-            <meta name="title" content="{% endraw %}{{ cookiecutter.project_name }}{% raw %}" />
-            <meta name="description" content="{% endraw %}{{ cookiecutter.project_description }}{% raw %}" />
-            <meta name="keywords" content="" />
+            <meta name="title" content="{% block meta_title %}{% endraw %}{{ cookiecutter.project_name }}{% raw %}{% endblock %}" />
+            <meta name="description" content="{% block meta_description %}{% endraw %}{{ cookiecutter.project_description }}{% raw %}{% endblock %}" />
+            <meta name="keywords" content="{% block meta_keywords %}{% endblock %}" />
+            {% block meta_extra %}{% endblock %}
 
-            <meta property="og:title" content="{% endraw %}{{ cookiecutter.project_name }}{% raw %}" />
-            <meta property="og:type" content="website" />
-            <meta property="og:url" content="http://{% endraw %}{{ cookiecutter.domain }}{% raw %}" />
-            <meta property="og:description" content="{% endraw %}{{ cookiecutter.project_description }}{% raw %}" />
+            <meta property="og:title" content="{% block meta_og_title %}{% endraw %}{{ cookiecutter.project_name }}{% raw %}{% endblock %}" />
+            <meta property="og:type" content="{% block meta_og_type %}website{% endblock %}" />
+            <meta property="og:url" content="{% block meta_og_url %}http://{% endraw %}{{ cookiecutter.domain }}{% raw %}{% endblock %}" />
+            <meta property="og:description" content="{% block meta_og_description %}{% endraw %}{{ cookiecutter.project_description }}{% raw %}{% endblock %}" />
+            {% block meta_og_extra %}{% endblock %}
 
-            <meta name="twitter:card" content="summary" />
-            <meta name="twitter:url" content="http://{% endraw %}{{ cookiecutter.domain }}{% raw %}" />
-            <meta name="twitter:title" content="{% endraw %}{{ cookiecutter.project_name }}{% raw %}" />
-            <meta name="twitter:description" content="{% endraw %}{{ cookiecutter.project_description }}{% raw %}" />
-            <meta name="twitter:creator" content="@abidibo" />
+            <meta name="twitter:card" content="{% block meta_tw_card %}summary{% endblock %}" />
+            <meta name="twitter:url" content="{% block meta_tw_url %}http://{% endraw %}{{ cookiecutter.domain }}{% raw %}{% endblock %}" />
+            <meta name="twitter:title" content="{% block meta_tw_title %}{% endraw %}{{ cookiecutter.project_name }}{% raw %}{% endblock %}" />
+            <meta name="twitter:description" content="{% block meta_tw_description %}{% endraw %}{{ cookiecutter.project_description }}{% raw %}{% endblock %}" />
+            <meta name="twitter:creator" content="{% block meta_tw_creator %}{% endblock %}" />
+            {% block meta_tw_extra %}{% endblock %}
         {% endblock %}
         {% stylesheet 'vendor' %}
         {% stylesheet '{% endraw %}{{ cookiecutter.repo_name }}{% raw %}' %}
@@ -36,11 +39,11 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsing-navbar">
                     &#9776;
                 </button>
-                <a class="navbar-brand" href="#">{% endraw %}{{ cookiecutter.project_name }}{% raw %}</a>
+                <a class="navbar-brand" href="/">{% endraw %}{{ cookiecutter.project_name }}{% raw %}</a>
                 <div class="collapse navbar-collapse" id="collapsing-navbar">
                     <ul class="nav navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
                 </div>
