fixes errors from prev and hook

--- a/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.core_name}}/templates/page.html
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.core_name}}/templates/page.html
@@ -1,8 +1,9 @@
-{% extends 'base.html' %}
+{% raw %}{% extends 'base.html' %}
 
 {% block content %}
 <div class="container">
     {% block page_content %}{% endblock %}
 </div>
 {% endblock %}
+{% endraw %}
 
