--- a/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/pages/templates/pages/default.html
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/pages/templates/pages/default.html
@@ -1,4 +1,4 @@
-{% extends 'page.html' %}
+{% raw %}{% extends 'page.html' %}
 
 {% block title %}{{ page.title }} | {{ block.super }}{% endblock %}
 
@@ -33,3 +33,4 @@
         </div>
     {% endif %}
 {% endblock %}
+{% endraw %}
