--- a/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.core_name}}/templates/admin/base_site.html
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.core_name}}/templates/admin/base_site.html
@@ -9,12 +9,14 @@
     <script src="{% static 'baton/app/dist/baton.min.js' %}"></script>
     <!-- <script src="http://localhost:8080/dist/baton.min.js"></script> -->
     <script>
+        {% baton_config 'CONFIRM_UNSAVED_CHANGES' as confirm_unsaved_changes %}
         (function ($, undefined) {
             $(window).on('load', function () {
                 Baton.init({
                     api: {
                         app_list: '{% url 'baton-app-list-json' %}'
-                    }
+                    },
+                    confirmUnsavedChanges: {% if confirm_unsaved_changes %}true{% else%}false{% endif %}
                 });
             })
         })(jQuery, undefined)
