--- a/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.core_name}}/templates/base.html
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.core_name}}/templates/base.html
@@ -14,13 +14,13 @@
             {% comment %}Open Graph{% endcomment %}
             <meta property="og:title" content="{% block meta_og_title %}{{ config.OG_TITLE }}{% endblock %}" />
             <meta property="og:type" content="{% block meta_og_type %}{{ config.OG_TYPE }}{% endblock %}" />
-            <meta property="og:url" content="{% block meta_og_url %}{{ config.SITE_URL }}{% endblock %}" />
+            <meta property="og:url" content="{% block meta_og_url %}{{ ABSURL }}{% endblock %}" />
             <meta property="og:description" content="{% block meta_og_description %}{{ config.OG_DESCRIPTION }}{% endblock %}" />
             <meta property="og:image" content="{% block meta_og_image %}{{ config.OG_IMAGE }}{% endblock %}" />
             {% block meta_og_extra %}{% endblock %}
             {% comment %}Twitter{% endcomment %}
             <meta name="twitter:card" content="{% block meta_tw_card %}summary{% endblock %}" />
-            <meta name="twitter:url" content="{% block meta_tw_url %}{{ config.SITE_URL }}{% endblock %}" />
+            <meta name="twitter:url" content="{% block meta_tw_url %}{{ ABSURL }}{% endblock %}" />
             <meta name="twitter:title" content="{% block meta_tw_title %}{{ config.TWITTER_TITLE }}{% endblock %}" />
             <meta name="twitter:description" content="{% block meta_tw_description %}{{ config.TWITTER_DESCRIPTION }}{% endblock %}" />
             {% if config.TWITTER_CREATOR %}
