--- a/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.core_name}}/templates/admin/base_site.html
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.core_name}}/templates/admin/base_site.html
@@ -11,6 +11,7 @@
     <script>
         {% baton_config 'CONFIRM_UNSAVED_CHANGES' as confirm_unsaved_changes %}
         {% baton_config 'SHOW_MULTIPART_UPLOADING' as show_multipart_uploading %}
+        {% baton_config 'ENABLE_IMAGES_PREVIEW' as enable_images_preview %}
         (function ($, undefined) {
             $(window).on('load', function () {
                 Baton.init({
@@ -18,7 +19,8 @@
                         app_list: '{% url 'baton-app-list-json' %}'
                     },
                     confirmUnsavedChanges: {% if confirm_unsaved_changes %}true{% else%}false{% endif %},
-                    showMultipartUploading: {% if show_multipart_uploading %}true{% else%}false{% endif %}
+                    showMultipartUploading: {% if show_multipart_uploading %}true{% else%}false{% endif %},
+                    enableImagesPreview: {% if enable_images_preview %}true{% else%}false{% endif %}
                 });
             })
         })(jQuery, undefined)
