--- a/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.core_name}}/static/{{cookiecutter.core_name}}/src/scss/_main.scss
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.core_name}}/static/{{cookiecutter.core_name}}/src/scss/_main.scss
@@ -1,14 +1,223 @@
-.video-wrapper {
-  position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
-  padding-top: 25px;
+.hidden,
+.hidden-mobile,
+.hidden-mobile-flex,
+.hidden-tablet-flex {
+  display: none !important;
+}
+
+.hidden-only-tablet {
+  display: block;
+}
+
+.mobile-only {
+  display: block;
+}
+
+@media only screen and (min-width: $tablet) {
+  .mobile-only {
+    display: none !important;
+  }
+
+  .hidden-mobile {
+    display: block !important;
+  }
+
+  .hidden-mobile-flex {
+    display: flex !important;
+  }
+
+  .hidden-only-tablet {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: $sm-desktop) {
+  .hidden-tablet-flex {
+    display: flex !important;
+  }
+
+  .hidden-only-tablet {
+    display: block;
+  }
+}
+
+.iframe-responsive {
   height: 0;
+  padding-bottom: 56.25%; // 16:9
+  padding-top: 25px;
+  position: relative;
 
   iframe {
+    height: 100%;
+    left: 0;
     position: absolute;
     top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
+  }
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-center-mobile {
+  text-align: center;
+
+  @media only screen and (min-width: $tablet) {
+    text-align: left;
+  }
+}
+
+.text-right-center-mobile {
+  text-align: center;
+
+  @media only screen and (min-width: $tablet) {
+    text-align: right;
+  }
+}
+
+.text-right {
+  text-align: right;
+}
+
+.img-fluid {
+  display: inline-block;
+  max-width: 100%;
+}
+
+.superbold {
+  font-weight: 900;
+}
+
+.responsive-table {
+  max-width: 100%;
+  overflow: auto;
+}
+
+// margins
+.mt-0 {
+  margin-top: 0 !important;
+}
+
+.mt-2 {
+  margin-top: 1rem !important;
+}
+
+.mt-4 {
+  margin-top: 2rem !important;
+}
+
+.mt-6 {
+  margin-top: 3rem !important;
+}
+
+.mb-0 {
+  margin-bottom: 0 !important;
+}
+
+.mb-2 {
+  margin-bottom: 1rem !important;
+}
+
+.mb-4 {
+  margin-bottom: 2rem !important;
+}
+
+.ml-0 {
+  margin-left: 0 !important;
+}
+
+.mr-2 {
+  margin-right: 1rem !important;
+}
+
+.my-2 {
+  margin-bottom: 1rem !important;
+  margin-top: 1rem !important;
+}
+
+.ui.menu .item.right.ml-0 {
+  margin-left: 0 !important;
+}
+
+.px-4 {
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
+}
+
+.px-2 {
+  padding-left: 1rem !important;
+  padding-right: 1rem !important;
+}
+
+.pl-0 {
+  padding-left: 0 !important;
+}
+
+// display
+.d-justify-between {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.d-justify-center-mobile {
+  @media only screen and (max-width: $tablet) {
+    display: flex;
+    flex-direction: row;
+    justify-content: center !important;
+  }
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+// list
+.ext {
+  list-style-type: none;
+
+  &::before {
+    content: '';
+    display: inline-block;
+    font-family: 'FontAwesome';
+    font-weight: normal;
+    margin-right: 8px;
+  }
+}
+
+.ext-pdf {
+  &::before {
+    content: '';
+  }
+}
+
+.ext-zip,
+.ext-rar {
+  &::before {
+    content: '';
+  }
+}
+
+.ext-txt,
+.ext-rtf {
+  &::before {
+    content: '';
+  }
+}
+
+.ext-doc,
+.ext-docx,
+.ext-odt {
+  &::before {
+    content: '';
+  }
+}
+
+.ext-jpg,
+.ext-png,
+.ext-jpeg {
+  &::before {
+    content: '';
   }
 }
