--- a/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.core_name}}/templates/home.html
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.core_name}}/templates/home.html
@@ -1,7 +1,7 @@
 {% raw %}{% extends 'base.html' %}
 
 {% block content %}
-    <div class="container">
+    <div class="ui container">
         <section>
             <h1>{% endraw %}{{ cookiecutter.project_name }}{% raw %}</h1>
             <p>{% endraw %}{{ cookiecutter.project_description }}{% raw %}</p>
